--- a/cliff.toml
+++ b/cliff.toml
@@ -22,9 +22,7 @@ body = """
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | striptags | trim | upper_first }}
-    {% for commit in commits
-    | filter(attribute="scope")
-    | sort(attribute="scope") %}
+    {% for commit in commits | filter(attribute="scope") | sort(attribute="scope") %}
         - **({{commit.scope}})**{% if commit.breaking %} [**breaking**]{% endif %} \
             {{ commit.message|trim }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }})) - {{ commit.author.name }}
     {%- endfor -%}
@@ -46,7 +44,7 @@ footer = """
 trim = true
 # postprocessors
 postprocessors = [
-    { pattern = '\$REPO', replace = "https://github.com/wang-wenxiangs/rust_project_template" }, # replace repository URL
+    { pattern = '\\$REPO', replace = "https://github.com/wang-wenxiangs/rust_project_template" }, # replace repository URL
 ]
 
 [git]
@@ -62,8 +60,8 @@ commit_preprocessors = [
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
-    { message = "\\[skip", skip = true },
-    { message = "\\p{Han}", skip = true },
+    { message = "^\\[skip\\]", skip = true },
+    { message = "[\\u4e00-\\u9fff]", skip = true },
     { message = "^feat", group = "Features" },
     { message = "^fix", group = "Bug Fixes" },
     { message = "^doc", group = "Documentation" },
