--- a/cliff.toml
+++ b/cliff.toml
@@ -36,7 +36,8 @@ footer = """
 trim = true
 # postprocessors
 postprocessors = [
-  # { pattern = '<REPO>', replace = "https://github.com/orhun/git-cliff" }, # replace repository URL
+  # replace repository URL
+  { pattern = '\\$REPO', replace = "https://github.com/wang-wenxiangs/rust_project_template" },
 ]
 # render body even when there are no releases to process
 # render_always = true
@@ -60,13 +61,17 @@ commit_preprocessors = [
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
+  { message = "\\[skip", skip = true },
+  { message = "\\p{Han}", skip = true },
   { message = "^feat", group = "<!-- 0 -->🚀 Features" },
   { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
   { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
   { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
   { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
   { message = "^style", group = "<!-- 5 -->🎨 Styling" },
+  { message = "^revert", group = "Revert" },
   { message = "^test", group = "<!-- 6 -->🧪 Testing" },
+  { message = "^chore\\(version\\):", skip = true },
   { message = "^chore\\(release\\): prepare for", skip = true },
   { message = "^chore\\(deps.*\\)", skip = true },
   { message = "^chore\\(pr\\)", skip = true },
@@ -74,11 +79,24 @@ commit_parsers = [
   { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
   { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
   { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
+  { message = "^chore", group = "Miscellaneous Chores" },
   { message = ".*", group = "<!-- 10 -->💼 Other" },
+  { body = ".*security", group = "Security" },
 ]
+
+# protect breaking changes from being skipped due to matching a skipping commit_parser
+protect_breaking_commits = false
 # filter out the commits that are not matched by commit parsers
 filter_commits = false
+# regex for matching git tags
+tag_pattern = "v[0-9].*"
+# regex for skipping tags
+skip_tags = "v0.1.0-beta.1"
+# regex for ignoring tags
+ignore_tags = ""
 # sort the tags topologically
 topo_order = false
 # sort the commits inside sections by oldest/newest order
 sort_commits = "oldest"
+# limit the number of commits included in the changelog.
+# limit_commits = 42
