--- a/cliff.toml
+++ b/cliff.toml
@@ -13,6 +13,8 @@ All notable changes to this project will be documented in this file.\n
 """
 # template for the changelog body
 # https://keats.github.io/tera/docs/#introduction
+body = """
+"""
 
 # template for the changelog footer
 footer = """
