--- a/cliff.toml
+++ b/cliff.toml
@@ -14,12 +14,7 @@ All notable changes to this project will be documented in this file.\n
 # template for the changelog body
 # https://keats.github.io/tera/docs/#introduction
 body = """
-{% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | upper_first }}
-    {% for commit in commits %}
-        - {{ commit.message | upper_first }}
-    {% endfor %}
-{% endfor %}
+........
 """
 
 # template for the changelog footer
@@ -28,6 +23,9 @@ footer = """
 """
 # remove the leading and trailing s
 trim = true
+
+render_always = true
+
 # postprocessors
 postprocessors = [
   # replace repository URL
@@ -39,6 +37,7 @@ postprocessors = [
 # output = "test.md"
 
 [git]
+require_conventional = false
 # parse the commits based on https://www.conventionalcommits.org
 conventional_commits = true
 # filter out the commits that are not conventional
@@ -93,4 +92,9 @@ topo_order = false
 # sort the commits inside sections by oldest/newest order
 sort_commits = "oldest"
 # limit the number of commits included in the changelog.
-# limit_commits = 42
+limit_commits = 42
+
+#link_parsers = [
+#  { pattern = "#(\\d+)", href = "https://github.com/orhun/git-cliff/issues/$1" },
+#  { pattern = "RFC(\\d+)", text = "ietf-rfc$1", href = "https://datatracker.ietf.org/doc/html/rfc$1" },
+#]
