--- a/deny.toml
+++ b/deny.toml
@@ -85,18 +85,19 @@ ignore = [
 # More documentation for the licenses section can be found here:
 # https://embarkstudios.github.io/cargo-deny/checks/licenses/cfg.html
 [licenses]
+
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
     "MIT",
-    "Apache-2.0",
-    "Unicode-DFS-2016",
-    "MPL-2.0",
-    "BSD-2-Clause",
-    "BSD-3-Clause",
-    "ISC",
-    "CC0-1.0",
+    #    "Apache-2.0",
+    #    "Unicode-DFS-2016",
+    #    "MPL-2.0",cargo deny check
+    #    "BSD-2-Clause",
+    #    "BSD-3-Clause",
+    #    "ISC",
+    #    "CC0-1.0",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
