--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,10 +29,17 @@ repos:
 - repo: local
   hooks:
     - id: cargo-fmt
-      # name: 钩子的名称，便于识别
       name: cargo fmt
-      # description: 钩子的描述，说明其功能
       description: Format files with rustfmt.
+      entry: bash -c 'cargo fmt'
+      language: rust
+      files: \.rs$
+      args: [ ]
+    - id: cargo-fmt-check
+      # name: 钩子的名称，便于识别
+      name: cargo fmt check
+      # description: 钩子的描述，说明其功能
+      description: Format files with rustfmt check.
       # entry: 指定要执行的命令
       entry: bash -c 'cargo fmt --check'
       # language: 指定钩子所用的语言环境
